--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #3b88fa; }
+  background: #3f216d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d48252; }
+  background: #192b09; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #236fef; }
+  background: #ee068a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c7f790; }
+  background: #795c0a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d6b6da; }
+  background: #f4cf50; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f9a903; }
+  background: #81aab4; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #afe38c; }
+  background: #a88f29; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d3a119; }
+  background: #319727; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2eba85; }
+  background: #a8d119; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #be95c8; }
+  background: #7daf12; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #3865e4; }
+  background: #58f983; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #034173; }
+  background: #799adb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #4102a7; }
+  background: #5d0571; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #1948d5; }
+  background: #485073; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6bbd28; }
+  background: #b87f37; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #2a2acf; }
+  background: #1bc55c; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0f614b; }
+  background: #ca939c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #0aa8ad; }
+  background: #32bcad; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #540977; }
+  background: #a96a62; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #5a6944; }
+  background: #f068eb; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #5d892d; }
+  background: #ef5340; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #cf12cd; }
+  background: #69fd3a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7cae2e; }
+  background: #733022; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b5fd94; }
+  background: #9f2783; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #0366c4; }
+  background: #113b44; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #01e604; }
+  background: #77fd40; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #0bd990; }
+  background: #78dd6c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7454ab; }
+  background: #67657e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9dfd10; }
+  background: #65383a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #34024a; }
+  background: #40a90b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9f6cca; }
+  background: #55b927; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #560ab3; }
+  background: #4568a2; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #880afc; }
+  background: #eb2869; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #58896d; }
+  background: #74c7d6; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a9ed3a; }
+  background: #998cf8; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e5f49d; }
+  background: #688517; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2b0be7; }
+  background: #fde1e1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e755d3; }
+  background: #770edc; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c38c86; }
+  background: #c244b3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #7b12ee; }
+  background: #5bbce5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f94d82; }
+  background: #321108; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #80c227; }
+  background: #50a814; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #85d26b; }
+  background: #40b3cc; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #9e4962; }
+  background: #44c244; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #addddd; }
+  background: #4eefb5; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #51a5b9; }
+  background: #5c9330; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #be1443; }
+  background: #16b615; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #2fea54; }
+  background: #b94615; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #cd87b5; }
+  background: #91eed2; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ea0cae; }
+  background: #5e4684; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e9f91f; }
+  background: #a8302e; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #8fccae; }
+  background: #098823; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #22e2f5; }
+  background: #2bb9bb; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #6a5e55; }
+  background: #a298a1; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #3c55d2; }
+  background: #da5650; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #7980b1; }
+  background: #3ac3c8; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #631dbe; }
+  background: #18b9f0; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #294b0d; }
+  background: #93528d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #31b862; }
+  background: #61a53e; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #289d10; }
+  background: #592596; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3d0aa6; }
+  background: #5d6096; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #9ead73; }
+  background: #896c5e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #176f21; }
+  background: #655afa; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #edcd4f; }
+  background: #58c955; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #33b2a2; }
+  background: #a2b4d9; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #084be0; }
+  background: #6a2c33; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #0db3d6; }
+  background: #b837fe; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8e0ad2; }
+  background: #451460; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #496cd5; }
+  background: #d69b4d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #be107c; }
+  background: #6ea5a1; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #f4ebb6; }
+  background: #3af060; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #d9ec78; }
+  background: #bb0f2e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #72f3c2; }
+  background: #664759; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9a2aeb; }
+  background: #a98d77; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #f0df4d; }
+  background: #09f997; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #eb80e0; }
+  background: #7fa07b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #59ecdb; }
+  background: #b6b0b0; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8c9aef; }
+  background: #ee896f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1e04dc; }
+  background: #edde17; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #87d1ef; }
+  background: #de2f4e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #397c61; }
+  background: #7a242e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #23dc6a; }
+  background: #8e901b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c830f3; }
+  background: #4f6e6e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #16f356; }
+  background: #2e4d39; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #5f93ab; }
+  background: #73aad0; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #fc4529; }
+  background: #da706a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #feff93; }
+  background: #574a5a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #4f435c; }
+  background: #e18c41; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #991bec; }
+  background: #2fb9d2; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #bb4169; }
+  background: #abed54; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4da223; }
+  background: #4d2358; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0f2f78; }
+  background: #92920a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #5c751f; }
+  background: #2e025b; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #079df1; }
+  background: #f35167; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #4bec45; }
+  background: #96563b; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8ec219; }
+  background: #0e4725; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #af2cd3; }
+  background: #c54283; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #5b2a92; }
+  background: #4de2f0; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #015c80; }
+  background: #8cc495; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #6ddbcf; }
+  background: #ed756e; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9349,6 +9349,15 @@ th {
   color: white; }
   .theme-btn:hover {
     background: #8565d1; }
+
+.theme-btn-b {
+  padding: 10px 22px;
+  font-size: 16px;
+  background: #545b62;
+  border: 0px;
+  color: white; }
+  .theme-btn-b:hover {
+    background: #41474d; }
 
 .theme-btn-big {
   padding: 12px 22px; }
@@ -15252,6 +15261,12 @@ option {
   background-image: linear-gradient(rgba(4, 169, 180, 0.15) 0.1em, transparent 0.1em), linear-gradient(90deg, rgba(4, 169, 180, 0.15) 0.1em, transparent 0.1em);
   background-size: 1em 1em; }
 
+.grid-auto {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  align-items: center;
+  grid-gap: 15px; }
+
 @media screen and (max-width: 767px) {
   .system-settings-wrapper {
     flex-direction: column; }
@@ -15316,6 +15331,12 @@ option {
 
   .dropdown-more-wrapper .dropdown-menu .pointer-top-img {
     display: none !important; }
+
+  .dashboard-top-title-div {
+    flex-direction: column; }
+    .dashboard-top-title-div .grid-auto {
+      grid-template-columns: 1fr;
+      margin-top: 15px !important; }
 
   .profile-box {
     padding: 10px; }
