--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #3f216d; }
+  background: #bb2939; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #192b09; }
+  background: #9845d9; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ee068a; }
+  background: #3e2338; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #795c0a; }
+  background: #fa4bd5; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f4cf50; }
+  background: #353569; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #81aab4; }
+  background: #7e767e; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a88f29; }
+  background: #7edddb; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #319727; }
+  background: #f5467f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a8d119; }
+  background: #c9bfb4; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7daf12; }
+  background: #865fda; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #58f983; }
+  background: #570d4d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #799adb; }
+  background: #058682; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #5d0571; }
+  background: #6e2d97; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #485073; }
+  background: #2053a2; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b87f37; }
+  background: #461302; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #1bc55c; }
+  background: #e221e9; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ca939c; }
+  background: #ac5445; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #32bcad; }
+  background: #61bf90; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a96a62; }
+  background: #6ecab2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f068eb; }
+  background: #6a1590; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #ef5340; }
+  background: #c78bb0; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #69fd3a; }
+  background: #ecb86c; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #733022; }
+  background: #dab46e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #9f2783; }
+  background: #94f9c7; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #113b44; }
+  background: #32f580; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #77fd40; }
+  background: #f69332; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #78dd6c; }
+  background: #e015af; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #67657e; }
+  background: #7d78dd; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #65383a; }
+  background: #ea19d0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #40a90b; }
+  background: #0cffb0; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #55b927; }
+  background: #785fa3; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4568a2; }
+  background: #9f5d25; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #eb2869; }
+  background: #da331f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #74c7d6; }
+  background: #3fec36; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #998cf8; }
+  background: #97ab9e; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #688517; }
+  background: #2bfaac; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #fde1e1; }
+  background: #08ab82; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #770edc; }
+  background: #13e299; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c244b3; }
+  background: #565e64; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5bbce5; }
+  background: #e8e931; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #321108; }
+  background: #d6f5eb; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #50a814; }
+  background: #1fcc73; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #40b3cc; }
+  background: #552855; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #44c244; }
+  background: #094509; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #4eefb5; }
+  background: #524cb6; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5c9330; }
+  background: #6db44f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #16b615; }
+  background: #d67c39; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #b94615; }
+  background: #8e1857; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #91eed2; }
+  background: #b11927; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #5e4684; }
+  background: #01cd6f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #a8302e; }
+  background: #661554; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #098823; }
+  background: #49f62d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2bb9bb; }
+  background: #cc4d94; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a298a1; }
+  background: #fc5157; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #da5650; }
+  background: #24d0ca; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3ac3c8; }
+  background: #c1e3bb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #18b9f0; }
+  background: #259864; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #93528d; }
+  background: #5d45ae; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #61a53e; }
+  background: #cd34ac; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #592596; }
+  background: #47b635; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #5d6096; }
+  background: #9760fb; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #896c5e; }
+  background: #2afcd6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #655afa; }
+  background: #c83d61; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #58c955; }
+  background: #2e22ab; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #a2b4d9; }
+  background: #504ef0; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #6a2c33; }
+  background: #44bbe5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b837fe; }
+  background: #b1c222; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #451460; }
+  background: #79e04d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #d69b4d; }
+  background: #36b6d0; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #6ea5a1; }
+  background: #f7ba2a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #3af060; }
+  background: #802e54; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #bb0f2e; }
+  background: #14acdd; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #664759; }
+  background: #23736e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a98d77; }
+  background: #386e0e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #09f997; }
+  background: #d8cfd5; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7fa07b; }
+  background: #bee037; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b6b0b0; }
+  background: #9ba3e8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #ee896f; }
+  background: #cfdf46; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #edde17; }
+  background: #e98453; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #de2f4e; }
+  background: #704fb3; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7a242e; }
+  background: #bd3fe4; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8e901b; }
+  background: #323371; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #4f6e6e; }
+  background: #a5bc8b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2e4d39; }
+  background: #7368ab; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #73aad0; }
+  background: #ec122e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #da706a; }
+  background: #49b14b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #574a5a; }
+  background: #8fda7d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e18c41; }
+  background: #e1d2ea; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #2fb9d2; }
+  background: #c9a8be; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #abed54; }
+  background: #74a01e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4d2358; }
+  background: #f056a6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #92920a; }
+  background: #763b61; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2e025b; }
+  background: #b35735; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f35167; }
+  background: #285824; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #96563b; }
+  background: #3546be; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #0e4725; }
+  background: #ee7eb9; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c54283; }
+  background: #b629f9; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #4de2f0; }
+  background: #0b82c9; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #8cc495; }
+  background: #6d5b6c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ed756e; }
+  background: #cce665; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
