--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #bb2939; }
+  background: #edf462; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9845d9; }
+  background: #69e7cc; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3e2338; }
+  background: #d3df10; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #fa4bd5; }
+  background: #8805fc; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #353569; }
+  background: #1d1225; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7e767e; }
+  background: #199763; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7edddb; }
+  background: #e92f36; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f5467f; }
+  background: #2b0c62; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c9bfb4; }
+  background: #91a5cc; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #865fda; }
+  background: #17a149; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #570d4d; }
+  background: #6abd27; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #058682; }
+  background: #b7f502; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #6e2d97; }
+  background: #e46cc8; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #2053a2; }
+  background: #3bdf6d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #461302; }
+  background: #dcd8c5; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #e221e9; }
+  background: #8f1b79; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ac5445; }
+  background: #1df9df; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #61bf90; }
+  background: #925185; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6ecab2; }
+  background: #910abf; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #6a1590; }
+  background: #564aee; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #c78bb0; }
+  background: #e429c4; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ecb86c; }
+  background: #091aa1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #dab46e; }
+  background: #173723; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #94f9c7; }
+  background: #209022; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #32f580; }
+  background: #7c950a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f69332; }
+  background: #2ef5b1; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e015af; }
+  background: #821474; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7d78dd; }
+  background: #da63d7; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ea19d0; }
+  background: #8c5063; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0cffb0; }
+  background: #753fca; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #785fa3; }
+  background: #65bc14; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #9f5d25; }
+  background: #05188f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #da331f; }
+  background: #18ed51; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3fec36; }
+  background: #01e3d8; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #97ab9e; }
+  background: #664260; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2bfaac; }
+  background: #acf3b9; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #08ab82; }
+  background: #7e49a4; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #13e299; }
+  background: #963369; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #565e64; }
+  background: #52251d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e8e931; }
+  background: #4c68ad; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d6f5eb; }
+  background: #8660a7; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #1fcc73; }
+  background: #622e36; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #552855; }
+  background: #0dcd8b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #094509; }
+  background: #e21348; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #524cb6; }
+  background: #36e7ea; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6db44f; }
+  background: #bf653b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d67c39; }
+  background: #853473; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8e1857; }
+  background: #124d69; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b11927; }
+  background: #aaacc6; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #01cd6f; }
+  background: #21d4f7; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #661554; }
+  background: #c98fea; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #49f62d; }
+  background: #4f08bf; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #cc4d94; }
+  background: #bf354a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #fc5157; }
+  background: #2e17bc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #24d0ca; }
+  background: #2ff8ca; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c1e3bb; }
+  background: #b396d5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #259864; }
+  background: #eadfba; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #5d45ae; }
+  background: #113d63; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #cd34ac; }
+  background: #e4b973; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #47b635; }
+  background: #f7cdc0; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #9760fb; }
+  background: #1c9d89; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2afcd6; }
+  background: #d3a7bc; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #c83d61; }
+  background: #a433eb; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #2e22ab; }
+  background: #ba96b0; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #504ef0; }
+  background: #967d0d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #44bbe5; }
+  background: #80375b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b1c222; }
+  background: #f6157b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #79e04d; }
+  background: #765b32; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #36b6d0; }
+  background: #69c8cb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f7ba2a; }
+  background: #4e30a0; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #802e54; }
+  background: #ab2b41; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #14acdd; }
+  background: #794323; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #23736e; }
+  background: #b56b58; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #386e0e; }
+  background: #a44ccf; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d8cfd5; }
+  background: #aa35a9; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #bee037; }
+  background: #7e41f4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9ba3e8; }
+  background: #7f8a4c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #cfdf46; }
+  background: #851d71; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e98453; }
+  background: #bfc897; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #704fb3; }
+  background: #66e6cc; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #bd3fe4; }
+  background: #213f94; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #323371; }
+  background: #e7692f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a5bc8b; }
+  background: #598f58; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7368ab; }
+  background: #37c8b8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ec122e; }
+  background: #6d400c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #49b14b; }
+  background: #ec3d15; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #8fda7d; }
+  background: #548278; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e1d2ea; }
+  background: #b33dec; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c9a8be; }
+  background: #c4a3f1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #74a01e; }
+  background: #38a06b; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f056a6; }
+  background: #22ef52; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #763b61; }
+  background: #926b20; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #b35735; }
+  background: #cc7517; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #285824; }
+  background: #5064b4; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #3546be; }
+  background: #8cf8dc; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ee7eb9; }
+  background: #ff2212; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b629f9; }
+  background: #4f91ef; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #0b82c9; }
+  background: #28c16a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6d5b6c; }
+  background: #1b1fba; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cce665; }
+  background: #e7df7c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14540,7 +14540,9 @@ li:hover {
     width: calc(100% - 40px);
     -moz-transition: all 300ms;
     -webkit-transition: all 300ms;
-    transition: all 300ms; }
+    transition: all 300ms;
+    height: 100vh;
+    background: #fff; }
     .sliding-section .sliding-right-section .scren-slide-icon {
       position: absolute;
       top: 76px;
@@ -14583,7 +14585,9 @@ li:hover {
   -webkit-transition: all 300ms;
   transition: all 300ms;
   left: 232px;
-  z-index: 3; }
+  z-index: 3;
+  height: 100%;
+  background: white; }
 
 .device-list-main-top {
   display: flex; }
@@ -15266,6 +15270,22 @@ option {
   grid-template-columns: auto auto auto;
   align-items: center;
   grid-gap: 15px; }
+
+.sliding-section .tabs-sidemenu-accord-container button span {
+  transition: all 800ms;
+  opacity: 0; }
+
+.slid-screen-wrapper .tabs-sidemenu-accord-container button span {
+  transition: all 800ms;
+  opacity: 1; }
+
+.sliding-section .tabs-sidemenu-accord-container .table-submenu-list {
+  transition: all 800ms;
+  opacity: 0; }
+
+.slid-screen-wrapper .tabs-sidemenu-accord-container .table-submenu-list {
+  transition: all 800ms;
+  opacity: 1; }
 
 @media screen and (max-width: 767px) {
   .system-settings-wrapper {
