--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2964,6 +2964,8 @@ table .parent-row,
     -moz-transition: all 300ms;
     -webkit-transition: all 300ms;
     transition: all 300ms;
+    height: 100vh;
+    background: #fff;
 
     .scren-slide-icon {
       position: absolute;
@@ -3020,6 +3022,8 @@ table .parent-row,
     transition: all 300ms;
     left: 232px;
     z-index: 3;
+    height: 100%;
+background: white;
   }
 }
 
@@ -3714,13 +3718,14 @@ border: 1px solid #CDCDD6;
 
 }
 .sec-system-settings-wrapper {
+ 
   .page-heading {
     font-family: 'proxima-regular' !important;
 color: #4c4c4c !important;
   }
 }
 .system-settings-wrapper {
-
+  
   .sliding-left-section {
     .device-filterleft-bar {
       margin-top: 0px;
@@ -3734,6 +3739,7 @@ color: #4c4c4c !important;
     }
   }
   }
+
   .tabs-aggre {
     button {
       padding-left: 8px !important;
@@ -3970,4 +3976,26 @@ color: #4c4c4c !important;
 grid-template-columns: auto auto auto;
 align-items: center;
 grid-gap: 15px;
+}
+
+.sliding-section .tabs-sidemenu-accord-container button span {
+  transition: all 800ms;
+  opacity: 0;
+}
+
+.slid-screen-wrapper {
+  .tabs-sidemenu-accord-container button span {
+    transition: all 800ms;
+    opacity: 1;
+  }
+}
+
+.sliding-section .tabs-sidemenu-accord-container .table-submenu-list {
+  transition: all 800ms;
+  opacity: 0;
+}
+
+.slid-screen-wrapper .tabs-sidemenu-accord-container .table-submenu-list {
+  transition: all 800ms;
+  opacity: 1;
 }
